<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<View
		android:id="@+id/separator1"
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:layout_marginBottom="5dp"
		android:background="#ffffff" />

	<TextView
	    android:id="@+id/remoteItemTitletxt"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		android:textStyle="bold"
		android:text="@string/custom_dialog_thing_title"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<EditText
		android:id="@+id/remoteItemTitle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:textColor="@android:color/primary_text_light"
		android:imeOptions="actionNext"
		android:windowSoftInputMode="stateVisible"
		android:inputType="text" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:gravity="center_horizontal"
		android:orientation="horizontal" >

	    <Button
			android:id="@+id/doneBtn"
			android:layout_width="125dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/button"
			android:layout_marginRight="20dip"
			android:text="@string/remote_done" />
	    
		<Button
			android:id="@+id/createNewBtn"
			android:layout_width="125dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="@drawable/button"
			android:text="@string/add_dialog_title" />
	</LinearLayout>
	

</LinearLayout>